--- a/.github/workflows/infra-deploy.yml
+++ b/.github/workflows/infra-deploy.yml
@@ -30,19 +30,19 @@ env:
 jobs:
   initialise_vars:
     runs-on: ubuntu-latest
+    steps:
+    - name: Initialise Variables
+      run: echo "Initialising environment variables"
     outputs:
       template_folder_path: ${{ env.template_folder_path }}
       template_file_name: ${{ env.template_file_name }}
       parameter_file_path: ${{ env.parameter_file_path }}
-      location: ${{ inputs.location }}
-      subscription_id: ${{ inputs.subscriptionId }}
-      environment: ${{ inputs.environment }}
+      location: '${{ inputs.location }}'
+      subscription_id: '${{ inputs.subscriptionId }}'
+      environment: '${{ inputs.environment }}'
       deployment_name: ${{ env.deployment_name }}
       skip_tests: ${{ env.skip_tests }}
       mode: ${{ env.mode }}
-    steps:
-      - name: Initialise Variables
-        run: echo "Initialising environment variables"
 
   build:
     needs: initialise_vars
