--- a/.github/workflows/infra-deploy.yml
+++ b/.github/workflows/infra-deploy.yml
@@ -22,6 +22,9 @@ on:
 env:
   template_folder_path: bicep/secret-management # path to directory containing bicep template
   template_file_name: deploy-sm-infra.bicep # name of the bicep template file including extension
+  # oidc_app_reg_client_id: "6a547723-e318-44f7-828f-9175e2211356" # client id of the azure application registration used to authenticate to azure using oidc, refer to https://learn.microsoft.com/en-us/azure/active-directory/develop/workload-identity-federation-create-trust?pivots=identity-wif-apps-methods-azp#github-actions
+  # azure_tenant_id: "6bd11972-e576-4984-abac-68b11846b79f" # azure ad tenant/directory id
+  # environment: "production" # name of the github environment
   deployment_name: "secrets-checker-infra-deploy" # name of the arm deployment"
   skip_tests: "'apiVersions Should Be Recent','Template Should Not Contain Blanks','Parameter Types Should Be Consistent','Parameters Must Be Referenced','Min And Max Value Are Numbers','Location Should Not Be Hardcoded','Password params must be secure','Outputs Must Not Contain Secrets', 'URIs Should Be Properly Constructed'"
   mode: "operations" # the contextual mode of the deployment
@@ -30,19 +33,21 @@ env:
 jobs:
   initialise_vars:
     runs-on: ubuntu-latest
-    steps:
-    - name: Initialise Variables
-      run: echo "Initialising environment variables"
     outputs:
       template_folder_path: ${{ env.template_folder_path }}
       template_file_name: ${{ env.template_file_name }}
       parameter_file_path: ${{ env.parameter_file_path }}
-      location: '${{ inputs.location }}'
-      subscription_id: '${{ inputs.subscriptionId }}'
-      environment: 'prod'
+      location: ${{ inputs.location }}
+      subscription_id: ${{ inputs.subscriptionId }}
+      oidc_app_reg_client_id: ${{ secrets.CLIENT_ID }}
+      azure_tenant_id: ${{ secrets.TENANT_ID }}
+      environment: ${{ inputs.environment }}
       deployment_name: ${{ env.deployment_name }}
       skip_tests: ${{ env.skip_tests }}
       mode: ${{ env.mode }}
+    steps:
+      - name: Initialise Variables
+        run: echo "Initialising environment variables"
 
   build:
     needs: initialise_vars
