--- a/.github/workflows/infra-deploy.yml
+++ b/.github/workflows/infra-deploy.yml
@@ -29,8 +29,6 @@ env:
   parameter_file_name: deploy-sm-infra.bicepparam
 
 jobs:
-  concurrency: ${{ inputs.environment }}
-  environment: ${{ inputs.environment }}
   initialise_vars:
     runs-on: ubuntu-latest
     outputs:
@@ -51,6 +49,7 @@ jobs:
         run: echo "Initialising environment variables"
 
   build:
+    concurrency: ${{ needs.initialise_vars.outputs.environment }}
     needs: initialise_vars
     permissions:
       id-token: write
