--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -36,6 +36,14 @@ on:
         type: string
         required: false
         default: build
+      oidc_app_reg_client_id:
+        description: "client id of the azure application registration used to authenticate to azure using oidc, refer to https://learn.microsoft.com/en-us/azure/active-directory/develop/workload-identity-federation-create-trust?pivots=identity-wif-apps-methods-azp#github-actions"
+        type: string
+        required: true
+      azure_tenant_id:
+        description: "azure ad tenant/directory id"
+        type: string
+        required: true
       environment:
         description: "github environment for build jobs"
         type: string
@@ -46,25 +54,21 @@ env:
   build_folder: build
   test_result_folder: results
 
-permissions:
-  id-token: write # Require write permission to Fetch an OIDC token.
-  contents: read
-
 jobs:
   run_build:
-    concurrency: ${{ inputs.environment }}
-    environment: ${{ inputs.environment }}
     runs-on: ubuntu-latest
+    environment:
+      name: ${{ inputs.environment }}
     steps:
       - name: Checkout
         uses: actions/checkout@v3.3.0
 
       - name: Login to Azure
-        uses: azure/login@v2
+        uses: azure/login@v1.4.6
         with:
-          client-id: ${{ secrets.CLIENT_ID }}
-          tenant-id: ${{ secrets.TENANT_ID }}
-          subscription-id: ${{ secrets.SUBSCRIPTION_ID }}
+          client-id: ${{ inputs.oidc_app_reg_client_id }}
+          tenant-id: ${{ inputs.azure_tenant_id }}
+          allow-no-subscriptions: true
 
       - name: Get all changed param files
         id: changed-markdown-files
