--- a/.github/workflows/code_deploy.yml
+++ b/.github/workflows/code_deploy.yml
@@ -1,68 +1,63 @@
-name: code_deploy
+name: Prod Operations - Secrets Checker - Code Deploy
 
 on:
-  workflow_call:
-    inputs:
-      function_app_name:
-        description: "the name of the function app in which the code is deployed to"
-        type: string
-      function_app_rg:
-        description: "resource group in which the function app belongs to"
-        type: string
-      environment:
-        description: "environment for this deployment"
-        type: string
-      subscription_id:
-        description: "azure subscription id used for deployments"
-        type: string
-        required: true
-      oidc_app_reg_client_id:
-        description: "The app registration id for this pipeline on Azure AD"
-        type: string
-        required: true
-      azure_tenant_id:
-        description: "azure ad tenant/directory id"
-        type: string
-        required: true
+  workflow_dispatch:
+  push:
+    branches:
+      - main
+    paths:
+      - scripts/function-apps/secrets-management/*
+  pull_request:
+    branches:
+      - main
+    paths:
+      - scripts/function-apps/secrets-management/*
 
 env:
-  deployment_name: "deploy_sctmgr_code" # name of the arm deployment"
-
+  location: "australiaeast" # location for resource deployment in azure
+  subscription_id: "ed439706-2678-4a1a-b0f7-44cd87e642ee" # azure subscription id (not required for tenant level deployments)
+  oidc_app_reg_client_id: "6a547723-e318-44f7-828f-9175e2211356" # client id of the azure application registration used to authenticate to azure using oidc, refer to https://learn.microsoft.com/en-us/azure/active-directory/develop/workload-identity-federation-create-trust?pivots=identity-wif-apps-methods-azp#github-actions
+  azure_tenant_id: "6bd11972-e576-4984-abac-68b11846b79f" # azure ad tenant/directory id
+  environment: "production" # name of the github environment
+  deployment_name: "operations_platform_secrets-checker-code" # name of the arm deployment"
+  function_appcodedir: "scripts/function-apps/secrets-management"
+  function_app_name: "ea-ae-secretschecker-func"
+  function_app_rg: "ea-ae-prod-global-secretschecker"
 jobs:
-  deploy_code:
+  initialise_vars:
     runs-on: ubuntu-latest
-    environment:
-      name: ${{ inputs.environment }} 
+    outputs:
+      location: ${{ env.location }}
+      subscription_id: ${{ env.subscription_id }}
+      oidc_app_reg_client_id: ${{ env.oidc_app_reg_client_id }}
+      azure_tenant_id: ${{ env.azure_tenant_id }}
+      environment: ${{ env.environment }}
+      deployment_name: ${{ env.deployment_name }}
+      function_appcodedir: ${{ env.function_appcodedir }}
+      function_app_name: ${{ env.function_app_name }}
+      function_app_rg: ${{ env.function_app_rg }}
+    steps:
+      - name: Initialise Variables
+        run: echo "Initialising environment variables"
+
+
+  build_code:
+    needs: initialise_vars
+    uses: eventsair/eventsair-azure-platform/.github/workflows/code_build.yml@main
+    with:
+      function_appcodedir: ${{ needs.initialise_vars.outputs.function_appcodedir }}
+
+  deploy_code:
+    needs: [initialise_vars, build_code]
+    if: ${{ github.ref == 'refs/heads/main' }}
     permissions:
       id-token: write
       contents: read
-    steps:
-      - name: 'Checkout gitHub action'
-        uses: actions/checkout@v3
-
-      - name: Prepare artifacts directory
-        run: |
-          mkdir ${{ runner.workspace }}/deploy
-
-      - name: Download Artifact
-        uses: actions/download-artifact@v4
-        with:
-          name: deploy_code
-          path: ${{ runner.workspace }}/deploy
-
-      - name: Authenticate to Azure
-        uses: azure/login@v1.4.6
-        with:
-          client-id: ${{ inputs.oidc_app_reg_client_id }}
-          tenant-id: ${{ inputs.azure_tenant_id }}
-          subscription-id: ${{ inputs.subscription_id }}
-          enable-AzPSSession: true
-
-      - name: Deploy function app
-        run: |
-          az functionapp deployment source config-zip -g ${{ inputs.function_app_rg }} -n ${{ inputs.function_app_name }} --src ${{ runner.workspace }}/deploy/fa-code.zip --verbose
-            
-      - name: 'Cleanup deploy folder'
-        run: |
-          rm -r ${{ runner.workspace }}/deploy
-      - uses: actions/checkout@v2
+    uses: eventsair/eventsair-azure-platform/.github/workflows/code_deploy.yml@main
+    with:
+      function_app_name: ${{ needs.initialise_vars.outputs.function_app_name }}
+      function_app_rg: ${{ needs.initialise_vars.outputs.function_app_rg}}
+      environment: ${{ needs.initialise_vars.outputs.environment }}
+      subscription_id: ${{ needs.initialise_vars.outputs.subscription_id }}
+      oidc_app_reg_client_id: ${{ needs.initialise_vars.outputs.oidc_app_reg_client_id }}
+      azure_tenant_id: ${{ needs.initialise_vars.outputs.azure_tenant_id }}
