--- a/.github/workflows/infra-deploy.yml
+++ b/.github/workflows/infra-deploy.yml
@@ -57,6 +57,7 @@ jobs:
       template_file_path: ${{ needs.initialise_vars.outputs.template_folder_path }}/${{ needs.initialise_vars.outputs.template_file_name }}
       skip_tests: ${{ needs.initialise_vars.outputs.skip_tests }}
       mode: ${{ needs.initialise_vars.outputs.mode }}
+      environment: ${{ needs.initialise_vars.outputs.environment }}
       continue_on_failed_tests: false
       oidc_app_reg_client_id: ${{ needs.initialise_vars.outputs.oidc_app_reg_client_id }}
       azure_tenant_id: ${{ needs.initialise_vars.outputs.azure_tenant_id }}
