--- a/.github/workflows/infra-deploy.yml
+++ b/.github/workflows/infra-deploy.yml
@@ -6,15 +6,15 @@ on:
     branches:
       - main
     paths:
-      - bicep/secrets-management
+      - bicep/secret-management
   pull_request:
     branches:
       - main
     paths:
-      - bicep/secrets-management
+      - bicep/secret-management
 
 env:
-  template_folder_path: bicep/secrets-management # path to directory containing bicep template
+  template_folder_path: bicep/secret-management # path to directory containing bicep template
   template_file_name: deploy-sm-infra.bicep # name of the bicep template file including extension
   location: "australiaeast" # location for resource deployment in azure
   subscription_id: "e6dffdaa-5ee9-4ea5-9330-1f148f3f2884" # azure subscription id (not required for tenant level deployments)
@@ -24,7 +24,7 @@ env:
   deployment_name: "operations_platform_secrets-checker" # name of the arm deployment"
   skip_tests: "'apiVersions Should Be Recent','Template Should Not Contain Blanks','Parameter Types Should Be Consistent','Parameters Must Be Referenced','Min And Max Value Are Numbers','Location Should Not Be Hardcoded','Password params must be secure','Outputs Must Not Contain Secrets', 'URIs Should Be Properly Constructed'"
   mode: "operations" # the contextual mode of the deployment
-  parameter_file_path: bicep/secret-management/deploy-sm-infra.parameters.biceppraram
+  parameter_file_path: bicep/secret-management/deploy-sm-infra.parameters.bicepparam
 
 
 jobs:
