--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -92,6 +92,8 @@ jobs:
         if: inputs.mode == 'operations'
         run: |
           $ErrorActionPreference = 'stop'
+          Write-Host ${{ runner.workspace }}
+          ls ${{ runner.workspace }}
           mkdir '${{ runner.workspace }}/deploy/param'
           $files = Get-ChildItem ${{ runner.workspace }}/deploy/param | Where-Object {$_.Name -like "*.json" }
           $template = "${{ inputs.template_file_name }}".Replace(".bicep",".json")
