--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -40,7 +40,6 @@ on:
         type: string
         required: false
         default: build
-      
 
 env:
   build_folder: build
@@ -61,12 +60,21 @@ jobs:
           tenant-id: ${{ secrets.TENANT_ID }}
           subscription-id: ${{ secrets.SUBSCRIPTION_ID }}
     
-      - name: Azure CLI script
-        uses: azure/cli@v2
+      - name: Get all changed param files
+        id: changed-markdown-files
+        uses: tj-actions/changed-files@v42
         with:
-          azcliversion: latest
-          inlineScript: |
-            az account show
-            # You can write your Azure CLI inline scripts here.
+          # Avoid using single or double quotes for multiline patterns
+          files: ${{ inputs.template_folder_path }}/${{ inputs.parameter_file_name }}
+
+      - name: List all changed files markdown files
+        if: steps.changed-markdown-files.outputs.any_changed == 'true'
+        env:
+          ALL_CHANGED_FILES: ${{ steps.changed-markdown-files.outputs.all_changed_files }}
+        run: |
+          for file in ${ALL_CHANGED_FILES}; do
+            echo "$file was changed"
+          done
 
       
+
