--- a/.github/workflows/deploy-infra.yml
+++ b/.github/workflows/deploy-infra.yml
@@ -2,12 +2,11 @@ name: Deploy Infrastructure for Secret Management utility
 
 on:
   workflow_dispatch:
-    
 
 env:
   template_folder_path: "bicep/secret-management"
   template_file_name: "deploy-sm-infra"
-  parameter_file_name: "deploy-sm-infra.parameters.bicepparam"
+  parameter_file_name: "deploy-sm-infra.bicepparam"
   mode: "operations"
   skip_tests: "'apiVersions Should Be Recent','Template Should Not Contain Blanks','Parameter Types Should Be Consistent','Parameters Must Be Referenced','Min And Max Value Are Numbers','Location Should Not Be Hardcoded','Password params must be secure','Outputs Must Not Contain Secrets', 'URIs Should Be Properly Constructed'"
   environment: "prod"
