--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -44,8 +44,7 @@ on:
 jobs: 
   run_preview:
     runs-on: ubuntu-latest
-    environment:
-      name: build
+    environment: ${{ inputs.environment }}
     steps:
       - name: Set current date as environment variable
         run: echo "current_time=$(date +'%Y%m%d-%H%M%S')" >> $GITHUB_ENV
